--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-.DS_Store
-.env
-
-loaded_messages.json
-loaded_vk_messages.json
-vk_config.json
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -58,9 +51,19 @@ coverage.xml
 
 # Django stuff:
 *.log
+local_settings.py
+
+# Flask instance folder
+instance/
 
 # Sphinx documentation
 docs/_build/
 
 # PyBuilder
 target/
+
+# IPython Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
